--- a/resources-en/src/inspectionDescriptions/LocalCanBeFinal.html
+++ b/resources-en/src/inspectionDescriptions/LocalCanBeFinal.html
@@ -1,7 +1,9 @@
 <html>
 <body>
 <font face="verdana" size="-1">This inspection reports parameters or local variables, found in the specified inspection
-scope, that may have a <b><font color="#000080">final</font></b> modifier added.<br><br>
-Use check boxes in the inspection options below, to define whether parameters or local variables (or both) are to be reported.</font>
+scope, that may have a <b><font color="#000080">final</font></b> modifier added.
+<!-- tooltip end -->
+<br><br>
+Use checkboxes in the inspection options below, to define whether parameters or local variables (or both) are to be reported.</font>
 </body>
 </html>
