IDEA-88915 "IDEA" instead of "IntelliJ IDEA" in >200 file template descriptions

--- a/plugins/groovy/resources/fileTemplates/code/Groovy JUnit Test Method.groovy.html
+++ b/plugins/groovy/resources/fileTemplates/code/Groovy JUnit Test Method.groovy.html
@@ -3,7 +3,7 @@
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111">
   <tr>
     <td colspan="3"><font face="verdana" size="-1">
-      This is a template used by <b>IDEA</b> to create a test method in a JUnit 3 test class.
+      This is a template used to create a test method in a JUnit 3 test class.
     </font>
     </td>
   </tr>
