--- a/plugins/devkit/resources/fileTemplates/j2ee/InspectionDescription.html.html
+++ b/plugins/devkit/resources/fileTemplates/j2ee/InspectionDescription.html.html
@@ -2,7 +2,7 @@
 <body>
 <table border="0" cellpadding="2" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111">
   <tr>
-    <td colspan="3"><font face="verdana" size="-1">This is a built-in template used by <b>IDEA</b> each time you create
+    <td colspan="3"><font face="verdana" size="-1">This is a built-in template used each time you create
       a new description for a code inspection.</font>
     </td>
   </tr>
