--- a/plugins/groovy/resources/fileTemplates/j2ee/GroovyServerPage.gsp.html
+++ b/plugins/groovy/resources/fileTemplates/j2ee/GroovyServerPage.gsp.html
@@ -20,7 +20,7 @@
   <tr>
     <td colspan="3">
       <font face="verdana" size="-1">
-        This is a built-in template used by <b>IDEA</b> each time you create new
+        This is a built-in template used each time you create new
         Groovy Server Page
       </font>
     </td>
