--- a/resources-en/src/tips/IntroduceVariableIncompleteCode.html
+++ b/resources-en/src/tips/IntroduceVariableIncompleteCode.html
@@ -6,7 +6,7 @@
 
 
     <p>
-        You can use the <span class="">Introduce Variable</span>
+        You can use the <span class="">Extract Variable</span>
         refactoring even on incomplete statements.
         Just select the necessary block in the editor and press <span class="shortcut">&shortcut:IntroduceVariable;</span>.</p>
       <p class="image"><img src="images/introduce_variable_incomplete.gif"></p>
