don't use IDEA in live template descriptions (IDEA-88976)

--- a/resources-en/src/tips/LiveTemplates.html
+++ b/resources-en/src/tips/LiveTemplates.html
@@ -5,8 +5,7 @@
 <body>
 
 
-    <h1>Try IDEA's
-      Live Templates</h1>
+    <h1>Try Live Templates</h1>
       <p>Live Templates
       allow you to generate many typical code constructs in seconds! For example, type</p>
       <p class="image"><img src="images/live_templates_1.gif"></p>
