--- a/resources-en/src/tips/excluded/NavigateFromStackTrace.html
+++ b/resources-en/src/tips/excluded/NavigateFromStackTrace.html
@@ -1,7 +1,7 @@
 <html>
 <body style="font-family: Verdana; font-size: 13;"   LEFTMARGIN="25"   TOPMARGIN="25"><table cellpadding="15" width="98%"  border="0"><tr><td>
 
-When you run or debug your program in <font style="font-family: Verdana; font-weight:bold;" size="3"  color="#3366cc">IDEA</font> and some exception is traced in the console view you may easily navigate
+When you run or debug your program and some exception is traced in the console view you may easily navigate
 to source code lines of this stack trace. Just click on highlighted source file name and line number in the console
 to see the source in the editor.
 
