--- a/resources-en/src/tips/CreatePropertyTag.html
+++ b/resources-en/src/tips/CreatePropertyTag.html
@@ -5,7 +5,7 @@
 <body>
 
 
-    <p>You can start referring to an Ant property or target even if it is not defined yet. IDEA&#039;s intention action feature
+    <p>You can start referring to an Ant property or target even if it is not defined yet. An intention action feature
       will suggest you to automatically create the necessary tag, without the need for you to leave your current
       editing location.</p>
       <p class="image"><img src="images/ant_property_intention.gif"></p>
