--- a/plugins/ant/src/inspectionDescriptions/AntResolveInspection.html
+++ b/plugins/ant/src/inspectionDescriptions/AntResolveInspection.html
@@ -4,7 +4,7 @@
   <tr>
     <td valign="top">
       <font face="verdana" size="-1">
-        This inspection reports unresolved references on properties as well as custom as well as custom type definitions that cannot be resolved.
+        This inspection reports unresolved references on properties as well as custom type definitions that cannot be resolved.
       </font>
     </td>
   </tr>
