--- a/resources-en/src/intentionDescriptions/PushConditionInCallAction/description.html
+++ b/resources-en/src/intentionDescriptions/PushConditionInCallAction/description.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-This intention pushes condition inside method call when both branches call same method and only one argument differs. 
+This intention pushes the condition of a conditional expression, with identical method calls on both branches,
+inside the method call if possible.
 </body>
 </html>
