IDEA-89017 (Add "disable for annotations" checkbox for "Magic Number" inspection)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/MagicNumber.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/MagicNumber.html
@@ -10,6 +10,8 @@ Use the first checkbox below to disable this inspection within <b>hashCode()</b>
 <p>
 Use the second checkbox below to ignore magic numbers in test code.
 <p>
+Use the third checkbox below to ignore magic numbers in annotations.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
