Make inspection work for Slf4j and fix IDEA-89836 (Inspection "Logging condition does not match log statement" is confused by "if else")

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/LoggingConditionDisagreesWithLogStatement.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/LoggingConditionDisagreesWithLogStatement.html
@@ -9,7 +9,8 @@ For example:
     logger.debug("some log message");
 }
 </pre></code>
-  <!-- tooltip end -->
+<p>This inspection understands the <i>java.util</i>, <i>log4j</i>, <i>commons-logging</i> and <i>slf4j</i> logging frameworks.
+<!-- tooltip end -->
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
