--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ChangeToEndOfLineCommentIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ChangeToEndOfLineCommentIntention/description.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-This intention a C-style block comment with
+This intention replaces a C-style block comment with
 one or more end-of-line comments.
 </body>
 </html>
