IDEA-90074 (Static method only used from one other class shall ignore test classes)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/StaticMethodOnlyUsedInOneClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/StaticMethodOnlyUsedInOneClass.html
@@ -7,6 +7,8 @@ method. Such methods could be moved into that class.
 This inspection may be cpu intensive.
 <!-- tooltip end -->
 <p>
+Use the checkbox below to have this inspection not report when the static method is only used from a test class.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
