IDEA-90184 ("Non-constant logger" inspection does not work properly)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/NonStaticFinalLogger.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/NonStaticFinalLogger.html
@@ -4,7 +4,7 @@ This inspection reports logger fields on classes which are not declared <b>stati
 and <b>final</b>.
 Ensuring that every classes logger is effectively constant and bound to that class
 simplifies the task of providing a unified logging implementation for an application. Interfaces,
-enumerations, annotations, inner classes, and abstract classes are not reported by this inspection.
+enumerations, annotations and inner classes are not reported by this inspection.
 <!-- tooltip end -->
 <p>
 Use the table below to specify Logger class names.
