--- a/resources-en/src/inspectionDescriptions/UndesirableClassUsage.html
+++ b/resources-en/src/inspectionDescriptions/UndesirableClassUsage.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-<font face="verdana" size="-1">
-Detects internally deprecated on undesirable classes usages.
-</font>
+This inspection detects usages of internally deprecated classes.
+<p><small>Internal inspection - has no effect outside of IntelliJ IDEA project.</small></p>
 </body>
 </html>
