--- a/resources-en/src/inspectionDescriptions/FileEqualsUsage.html
+++ b/resources-en/src/inspectionDescriptions/FileEqualsUsage.html
@@ -1,8 +1,7 @@
 <html>
 <body>
-<font face="verdana" size="-1">
-This inspection detects usages of File.equals/hashCode/compareTo which do not honor case-sensitivity on MacOS.
-FileUtil.filesEquals/fileHashCode/compareFiles should be used instead.
-</font>
+This inspection detects usages of File.equals/hashCode/compareTo methods - which do not honor case-insensitivity on Mac OS X.
+Please use FileUtil.filesEquals/fileHashCode/compareFiles methods instead.
+<p><small>Internal inspection - has no effect outside of IntelliJ IDEA project.</small></p>
 </body>
 </html>
