--- a/plugins/InspectionGadgets/src/inspectionDescriptions/MarkerInterface.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/MarkerInterface.html
@@ -2,7 +2,8 @@
 <body>
 This inspection reports "marker" interfaces which have no methods or fields.
 Such interfaces may be confusing, and normally indicate a design failure.
-Interfaces which extend two or more other interfaces will not be reported by
+Interfaces which extend two or more other interfaces or or interfaces
+which specialize the generic type of their superinterface will not be reported by
 this inspection.
 <!-- tooltip end -->
 <p>
