better description and cleanup

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/AssertsWithoutMessages.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/AssertsWithoutMessages.html
@@ -1,9 +1,7 @@
 <html>
 <body>
-This inspection reports calls to JUnit <b>assertXXX()</b> or
-<b>fail()</b> methods that don't
-report an error message on assertion failure. Error messages may help clarify the test case's
-intent.
+This inspection reports calls to JUnit <b>assertXXX()</b> or <b>fail()</b> methods that do not have an error message string argument.
+An error message on assertion failure may help clarify the test case's intent.
 <!-- tooltip end -->
 <p>
 <small>Powered by InspectionGadgets</small>
