Replace "remove 'extends TestCase' from class" quickfix with "Convert JUnit 3 class to JUnit 4" quickfix and associated cleanup and i18n

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/JUnit4AnnotatedMethodInJUnit3TestCase.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/JUnit4AnnotatedMethodInJUnit3TestCase.html
@@ -1,8 +1,9 @@
 <html>
 <body>
-This inspection reports JUnit 4 @Test annotated methods which are located inside a class
-extending the abstract JUnit 3 class TestCase. Mixing JUnit API's like this is
-confusing and can lead to problems running the tests, e.g. method annotated with @Ignore won't be actually ignored if its name starts with test
+This inspection reports JUnit 4 <b>@Test</b> annotated methods which are located inside a class
+extending the abstract JUnit 3 class <b>TestCase</b>. Mixing JUnit API's like this is
+confusing and can lead to problems running the tests, for example a method annotated with <b>@Ignore</b> won't
+be actually ignored if its name starts with test.
 <!-- tooltip end -->
 <p>
 <small>Powered by InspectionGadgets</small>
