IDEA-90686 (Raw use of parameterized class shall be ignored in annotations.)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/RawUseOfParameterizedType.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/RawUseOfParameterizedType.html
@@ -8,10 +8,12 @@ This inspection only reports if the project or module is configured to use a
 language level of 5.0 or higher.
 <!-- tooltip end -->
 <p>
-Use the first checkbox below to ignore the construction of objects of
-parameterized types. Use the second checkbox below to ignore raw types in type
-casts.
+Use the first checkbox below to ignore the construction of objects of parameterized types.
 <p>
-<small>Powered by InspectionGadgets</small>
+Use the second checkbox below to ignore raw types in type casts.
+<p>
+Use the third checkbox to ignore raw types in places where parameterized types would not be compilable
+  (for example in array creation expressions)
+<p><small>Powered by InspectionGadgets</small>
 </body>
 </html>
