html path inspections merged

--- a/xml/impl/resources/inspectionDescriptions/HtmlUnknownTarget.html
+++ b/xml/impl/resources/inspectionDescriptions/HtmlUnknownTarget.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<font face="verdana" size="-1">This inspection checks unknown values of "href" attribute in HTML.<br>
+<font face="verdana" size="-1">This inspection checks unresolved file references in HTML.<br>
 </font>
 </body>
 </html>
