--- a/resources-en/src/tips/CompleteStatement.html
+++ b/resources-en/src/tips/CompleteStatement.html
@@ -10,7 +10,7 @@
       <span class="code_emphasis">do-while</span>,
       <span class="code_emphasis">try-catch</span>,
       <span class="code_emphasis">return</span>
-      (or a method call) into a syntactically correct construct.</p>
+      (or a method call) into a syntactically correct construct (e.g. add curly braces).</p>
       <p class="image"><img src="images/complete_statement.gif"></p>
 
 
