--- a/plugins/InspectionGadgets/src/inspectionDescriptions/PublicMethodWithoutLogging.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/PublicMethodWithoutLogging.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-This inspection reports any public method which does not contain a logging statement.
+This inspection reports any public method which does not contain a logging statement. This inspection does not report
+simple getters and setters.
 <!-- tooltip end -->
 <p>
 Use the table below to specify below to specify Logger class names.
