IDEA-90329 (Constructor with too many parameters shall have an option to be ignored according to its accessesibility)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/ParametersPerConstructor.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/ParametersPerConstructor.html
@@ -6,6 +6,9 @@ with too many parameters can be a good sign that refactoring is necessary.
 <p>
 Use the field provided below to specify the maximum acceptable number of parameters a constructor might have.
 <p>
+Use the combobox below to specify if the inspection should ignore private, package local & private or protected, package local and
+private constructors
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
