--- a/plugins/InspectionGadgets/src/inspectionDescriptions/CastToConcreteClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/CastToConcreteClass.html
@@ -5,7 +5,9 @@ Such declarations may represent a failure of abstraction, and may make testing m
 Declarations whose classes come from system or third-party libraries will not be reported by this inspection.
 <!-- tooltip end -->
 <p>
-Use the checkbox below to have this inspection ignore casts to abstract classes.
+Use the first checkbox below to have this inspection ignore casts to abstract classes.
+<p>
+Use the second checkbox below to have this inspection ignore casts inside <code>equals()</code> methods.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
