IDEA-90685 (Access to static field locked on instance data shall ignore accessing the logger)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/AccessToStaticFieldLockedOnInstance.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/AccessToStaticFieldLockedOnInstance.html
@@ -6,6 +6,8 @@ Locking a <b>static</b> field on instance data does not prevent the field from b
 modified by other instances, and thus may result in surprising race conditions.
 <!-- tooltip end -->
 <p>
+Use the table below to specify classes to ignore. Any static fields of the types specified will be ignored by this inspection.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
