test, fix and added option to report overloads even if parameter types are not compatible

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/MethodOverloadsParentMethod.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/MethodOverloadsParentMethod.html
@@ -1,9 +1,11 @@
 <html>
 <body>
-This inspection reports instance methods having the same name and different but compatible arguments as
+This inspection reports instance methods having the same name and the same number of parameters with the same or compatible types as
 a method in a superclass. In this case, the child method overloads the parent method, instead of overriding it.
 While that may be intended, if unintended it may result in latent bugs.
 <!-- tooltip end -->
+<p>
+Use the checkbox below also report even if the parameter types are not compatible.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
