fix, cleanup and test

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/OverloadedMethodsWithSameNumberOfParameters.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/OverloadedMethodsWithSameNumberOfParameters.html
@@ -1,8 +1,10 @@
 <html>
 <body>
-This inspection reports on cases where multiple methods of the same class are declared
-with the identical name and same number of parameters.
+This inspection reports on cases where multiple methods in the same class are declared
+with an identical name and the same number of parameters.
 <!-- tooltip end -->
+<p>
+Use the checkbox below to ignore overloaded methods whose parameter types are definitely incompatible.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
