--- a/resources-en/src/fileTemplates/code/Implemented Method Body.java.html
+++ b/resources-en/src/fileTemplates/code/Implemented Method Body.java.html
@@ -40,6 +40,14 @@ calling the <b>Code | Implement Method...</b> function (<b><i>Ctrl+I</i></b>).<b
     <td width="10">&nbsp;</td>
     <td valign="top"><font face="verdana" size="-1">non-qualified name of the class where method is implemented</font></td>
   </tr>
+  <tr>
+    <td colspan="3"><font face="verdana" size="-1">All the predefined variables from "File Header" Include template are also available
+      (e.g.
+      <font face="verdana" size="-2" color="#7F0000"><b><i>${USER}</i></b></font>,
+      <font face="verdana" size="-2" color="#7F0000"><b><i>${DATE}</i></b></font>,
+      etc)</font>
+    </td>
+  </tr>
 </table>
 </body>
 </html>
