add option to ignore exceptions subclassing others

--- a/resources-en/src/inspectionDescriptions/DuplicateThrows.html
+++ b/resources-en/src/inspectionDescriptions/DuplicateThrows.html
@@ -1,18 +1,21 @@
 <html>
 <body>
-<font face="verdana" size="-1">This inspection reports duplicate classes in the method throws list.
-<br>For example:
+This inspection reports duplicate exceptions in a method throws list.
+For example:
 <code><pre>
-<b><font color="#000080">void</font></b> f() <b><font color="#000080">throws</font></b> Exception, <b><font color="#800000">Exception</font></b> {
+<b>void</b> f() <b>throws</b> Exception, <b>Exception</b> {
 }
 </pre></code>
 <br>
-Also, inspection warns if you have declared two exceptions one of which subclasses another.
- E.g.:
+The inspection also warns if one exception subclasses another.
+ For example:
 <code><pre>
-<b><font color="#000080">void</font></b> f() <b><font color="#000080">throws</font></b> <b><font color="#800000">IOException</font></b>, Exception {
+<b>void</b> f() <b>throws</b> <b>IOException</b>, Exception {
 }
 </pre></code>
-</font>
+<!-- tooltip end -->
+<p>
+Use the checkbox below to ignore exceptions subclassing others.
+</p>
 </body>
 </html>
