add option to ignore any exceptions which hide other exceptions 2 (IDEA-91755)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/TooBroadCatch.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/TooBroadCatch.html
@@ -8,6 +8,9 @@ Use the first checkbox below to have this inspection only warn on the most gener
 <p>
 Use the second checkbox below to ignore overly broad <b>catch</b> blocks in test code.
 <p>
+Use the third checkbox below to ignore any exceptions which hide other exceptions, but which may be thrown and thus
+are technically not overly broad.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
