Add an 'ignore XXX inner interfaces' checkbox to all 'XXX inner class' inspections (IDEA-91739)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/PublicInnerClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/PublicInnerClass.html
@@ -3,6 +3,10 @@
 This inspection reports <b>public</b> inner classes.
 <!-- tooltip end -->
 <p>
+Use the first checkbox below to ignore <b>public</b> inner enums.
+<p>
+Use the seconds checkbox below to ignore <b>public</b> inner interface.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
