--- a/plugins/InspectionGadgets/src/inspectionDescriptions/PackageVisibleInnerClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/PackageVisibleInnerClass.html
@@ -1,7 +1,11 @@
 <html>
 <body>
-This inspection reports package-visible inner classes.
+This inspection reports package-local inner classes.
 <!-- tooltip end -->
+<p>
+Use the first checkbox below to ignore package-local inner enums.
+<p>
+Use the seconds checkbox below to ignore package-local inner interface.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
