--- a/plugins/InspectionGadgets/src/inspectionDescriptions/ProtectedInnerClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/ProtectedInnerClass.html
@@ -3,6 +3,10 @@
 This inspection reports <b>protected</b> inner classes.
 <!-- tooltip end -->
 <p>
+Use the first checkbox below to ignore <b>protected</b> inner enums.
+<p>
+Use the seconds checkbox below to ignore <b>protected</b> inner interface.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
