IDEA-91717 (Class extends utility class inspection shall ignore utility classes)

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/ExtendsUtilityClass.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/ExtendsUtilityClass.html
@@ -6,6 +6,8 @@ class also allows inadvertent object instantiation of the utility class, because
 the constructor can not be made private.
 <!-- tooltip end -->
 <p>
+Use the checkbox below to ignore any classes that override a utility class but are also utility classes themselves.
+<p>
 <small>Powered by InspectionGadgets</small>
 </body>
 </html>
