--- a/plugins/InspectionGadgets/src/inspectionDescriptions/UnclearBinaryExpression.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/UnclearBinaryExpression.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-This inspection reports binary expressions consisting of multiple terms with different operators without parentheses. Such expressions
-can be unclear because not every developer is intimately familiar with all the precedence rules of the different operators. This inspection
-has a quickfix which adds clarifying parentheses.
+This inspection reports binary, conditional or <b>instanceof</b> expressions consisting of multiple terms with different operators
+without parentheses. Such expressions can be unclear because not every developer is intimately familiar with all the precedence rules
+of the different operators. This inspection has a quickfix which adds clarifying parentheses.
 <!-- tooltip end -->
 <p>
 <small>New in 11, Powered by InspectionGadgets</small>
