--- a/plugins/InspectionGadgets/src/inspectionDescriptions/PointlessBooleanExpression.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/PointlessBooleanExpression.html
@@ -1,12 +1,14 @@
 <html>
 <body>
 This inspection reports pointless or pointlessly
-complicated boolean expressions. Such expressions include <b>and</b>ing with true,
-<b>or</b>ing with false,
+complicated boolean expressions. Such expressions include <b>and</b>ing with <b>true</b>,
+<b>or</b>ing with <b>false</b>,
 equality comparison with a boolean literal, or negation of a boolean literal. Such expressions may be the result of automated refactorings
 not completely followed through to completion, and in any case are unlikely to be what the developer
 intended to do.
 <!-- tooltip end -->
+<p>
+Use the checkbox below to ignore named constants when determining if an expression is pointless.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
